--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,7 +198,7 @@ img {
   bottom: -24px;
   left: 50%;
   width: calc(100% - 50px);
-  transform: translateX(-50%);
+  transform: translate(-50%);
   padding: 24px;
   transition: var(--transition);
   opacity: 0;
@@ -272,3 +272,5 @@ footer .line {
   background-color: var(--c-brand);
   color: white;
 }
+
+
